--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,7 +17,7 @@ jobs:
               with:
                 dotnet-version: 6.0.x
             - name: Restore dependencies
-              run: dotnet restore SampleApplication.csproj
+              run: dotnet restore ./src/SampleApplication.csproj
             - name: Build
               run: dotnet build --no-restore
             - name: Publish
