--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Restore dependencies
               run: dotnet restore ./src/SampleApplication.csproj
             - name: Build
-              run: dotnet build --no-restore
+              run: dotnet build ./src/ --no-restore
             - name: Publish
               run: dotnet publish ./src/SampleApplication.csproj -c Release -o ${{env.DOTNET_ROOT}}/webapp
             - name: Upload artifact
