--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,8 @@
 name: learn-github-actions
+
+env:
+  AZURE_WEBAPP_NAME: app-nakano-hol-github-intermediate-samplef56g
+  AZURE_WEBAPP_PACKAGE_PATH: '.'
 on:
     push:
         branches: ["main"]
