--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,3 +33,26 @@ jobs:
               with:
                 name: dotnet-webapp
                 path: ${{env.DOTNET_ROOT}}/webapp
+
+    deploy:
+      permissions:
+        contents: none
+      runs-on: ubuntu-latest
+      needs: build
+      environment:
+        name: 'Production'
+        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+      steps:
+        - name: Download artifact from build job
+          uses: actions/download-artifact@v3
+          with:
+            name: dotnet-webapp
+        - name: Deploy to Azure Web App
+          id: deploy-to-webapp
+          uses: azure/webapps-deploy@v2
+          with:
+            app-name: ${{ env.AZURE_WEBAPP_NAME }}
+            publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+            package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
